--- a/src/test.html
+++ b/src/test.html
@@ -91,7 +91,7 @@
             </div>
         </div>
     </div>
-    <script src="test.js"></script>
+    <script type ="module" src="test.js"></script>
 </body>
 
 </html>
